added icons fonts

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -88,4 +88,29 @@ h6 {
 	}
 }
 
+//<ПОДКЛЮЧАЕМ ШРИФТЫ>=======================
+//&display=swap&subset=cyrillic-ext
+
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap");
+//font-family: 'Heebo', sans-serif;
+
 @import "fonts";
+//</ПОДКЛЮЧАЕМ ШРИФТЫ>===========================
+
+//<ПОДКЛЮЧАЕМ ИКОНОЧНЫЕ ШРИФТЫ>===================
+@import "icons";
+//</ПОДКЛЮЧАЕМ ИКОНОЧНЫЕ ШРИФТЫ>===================
+
+//<ШРИФТ ПО УМОЛЧАНИЮ>======================
+$fontFamily: "Heebo";
+//</ШРИФТ ПО УМОЛЧАНИЮ>======================
+
+//<ПЕРЕМЕННЫЕ>======================
+$minWidth: 320px;
+$maxWidth: 1920;
+$maxWidthContainer: 1170;
+$md1: $maxWidthContainer + 12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+//</ПЕРЕМЕННЫЕ>======================
