--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -75,3 +75,8 @@ body {
 	}
 }
 //</ОСНОВНАЯ СЕТКА>===============================
+
+//<ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
+@import "header";
+
+//</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
