--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -166,6 +166,14 @@ body._lock {
   margin: 0 auto;
 }
 
+.header__content {
+  max-width: 1032px;
+}
+
+.icon-menu {
+  display: none;
+}
+
 @media (max-width: 991.98px) {
   ._container {
     max-width: 750px;
@@ -182,6 +190,50 @@ body._lock {
   ._container {
     max-width: none;
     padding: 0 10px;
+  }
+
+  .icon-menu {
+    display: block;
+    position: absolute;
+    top: 18px;
+    right: 10px;
+    height: 18px;
+    width: 30px;
+    cursor: pointer;
+    z-index: 5;
+  }
+
+  .icon-menu span {
+    transform: all 0.3s ease 0s;
+    top: calc(50% - 1px);
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+  }
+
+  .icon-menu span:first-child {
+    top: 0;
+  }
+
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+
+  .icon-menu._active span {
+    transform: scale(0);
+  }
+
+  .icon-menu._active span:first-child {
+    transform: rotate(-45deg);
+    top: calc(50% - 1px);
+  }
+
+  .icon-menu._active span:last-child {
+    transform: rotate(45deg);
+    bottom: calc(50% + 1px);
   }
 }
 @supports (-webkit-appearance:none){
