Добавил стили меню бургер

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -20,7 +20,7 @@
    }
 }
 
-//<БУРГЕР> ================
+//<БУРГЕР> =================
 .icon-menu {
    display: none;
    @media (max-width: $md3+px) {
