--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,8 +1,15 @@
 .header {
    &__content {
-      max-width: 1032px;
+      max-width: 1052px;
+      padding: 0px 10px;
+      margin: 0 auto;
    }
    &__menu {
+      display: flex;
+      justify-content: flex-end;
+      height: 82px;
+      align-items: center;
+      padding: 10px 0;
    }
 }
 
@@ -11,12 +18,44 @@
    }
 
    &__body {
+      @media (max-width: $md3+px) {
+         position: fixed;
+         width: 100%;
+         height: 100%;
+         top: 0;
+         left: 0;
+         overflow: auto;
+         padding: 60px 10px 30px 10px;
+      }
    }
 
    &__list {
+      li {
+         margin: 0px 0px 10px 0px;
+         &:last-child {
+            margin: 0px 0px 0px 0px;
+         }
+      }
+      @media (min-width: $md3+px) {
+         display: flex;
+         li {
+            margin: 0px 33px 0px 0px;
+         }
+      }
    }
 
    &__link {
+      font-family: $fontFamily;
+      font-size: 20px;
+      line-height: 29px;
+      font-weight: 500;
+      color: black;
+      transition: color 0.3s ease 0s;
+      @media (min-width: $md2+px) {
+         &:hover {
+            color: #ff6464;
+         }
+      }
    }
 }
 
@@ -25,9 +64,7 @@
    display: none;
    @media (max-width: $md3+px) {
       display: block;
-      position: absolute;
-      top: 18px;
-      right: 10px;
+      position: relative;
       height: 18px;
       width: 30px;
       cursor: pointer;
@@ -53,7 +90,7 @@
             transform: scale(0);
             &:first-child {
                transform: rotate(-45deg);
-               top: calc(50% - 1px);
+               top: calc(50% - 3px);
             }
             &:last-child {
                transform: rotate(45deg);
