--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -23,7 +23,7 @@
 //</ПОДКЛЮЧАЕМ ИКОНОЧНЫЕ ШРИФТЫ>===================
 
 //<ШРИФТ ПО УМОЛЧАНИЮ>======================
-$fontFamily: "Heebo";
+$fontFamily: "Heebo", sans-serif;
 //</ШРИФТ ПО УМОЛЧАНИЮ>======================
 
 //<ПЕРЕМЕННЫЕ>======================
@@ -63,13 +63,13 @@ body {
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 auto;
+	// @media (max-width: $md1+px) {
+	// 	max-width: 970px;
+	// }
 	@media (max-width: $md1+px) {
-		max-width: 970px;
-	}
-	@media (max-width: $md2+px) {
 		max-width: 750px;
 	}
-	@media (max-width: $md3+px) {
+	@media (max-width: $md2+px) {
 		max-width: none;
 		padding: 0 10px;
 	}
