--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -167,36 +167,83 @@ body._lock {
 }
 
 .header__content {
-  max-width: 1032px;
+  max-width: 1052px;
+  padding: 0px 10px;
+  margin: 0 auto;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: flex-end;
+  height: 82px;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.menu__list li {
+  margin: 0px 0px 10px 0px;
+}
+
+.menu__list li:last-child {
+  margin: 0px 0px 0px 0px;
+}
+
+.menu__link {
+  font-family: "Heebo", sans-serif;
+  font-size: 20px;
+  line-height: 29px;
+  font-weight: 500;
+  color: black;
+  transition: color 0.3s ease 0s;
 }
 
 .icon-menu {
   display: none;
 }
 
+@media (min-width: 767.98px) {
+  .menu__list {
+    display: flex;
+  }
+
+  .menu__list li {
+    margin: 0px 33px 0px 0px;
+  }
+}
+
+@media (min-width: 991.98px) {
+  .menu__link:hover {
+    color: #ff6464;
+  }
+}
+
 @media (max-width: 991.98px) {
   ._container {
-    max-width: 750px;
+    max-width: none;
+    padding: 0 10px;
   }
 }
 
 @media (max-width: 868px) {
   ._container {
-    max-width: 970px;
+    max-width: 750px;
   }
 }
 
 @media (max-width: 767.98px) {
-  ._container {
-    max-width: none;
-    padding: 0 10px;
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    padding: 60px 10px 30px 10px;
   }
 
   .icon-menu {
     display: block;
-    position: absolute;
-    top: 18px;
-    right: 10px;
+    position: relative;
     height: 18px;
     width: 30px;
     cursor: pointer;
@@ -228,7 +275,7 @@ body._lock {
 
   .icon-menu._active span:first-child {
     transform: rotate(-45deg);
-    top: calc(50% - 1px);
+    top: calc(50% - 3px);
   }
 
   .icon-menu._active span:last-child {
@@ -237,6 +284,22 @@ body._lock {
   }
 }
 @supports (-webkit-appearance:none){
+
+}
+
+ @media (min-width: 767.98px){
+
+@supports (-webkit-appearance:none){
+
+}
+
+}
+
+ @media (min-width: 991.98px){
+
+@supports (-webkit-appearance:none){
+
+}
 
 }
 
