--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -181,7 +181,7 @@ body._lock {
 }
 
 .menu__list li {
-  margin: 0px 0px 10px 0px;
+  margin: 0px 0px 40px 0px;
 }
 
 .menu__list li:last-child {
@@ -231,14 +231,30 @@ body._lock {
 }
 
 @media (max-width: 767.98px) {
+  .header__menu {
+    height: 50px;
+  }
+
   .menu__body {
+    transition: transform 0.8s ease 0s;
     position: fixed;
     width: 100%;
     height: 100%;
-    top: 0;
+    top: -100%;
     left: 0;
     overflow: auto;
     padding: 60px 10px 30px 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  .menu__body._active {
+    transform: translate(0px, 100%);
+  }
+
+  .menu__link {
+    font-size: 40px;
+    display: block;
+    text-align: center;
   }
 
   .icon-menu {
