Закончил адаптив первого блока

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -39,8 +39,9 @@ $md4: 479.98;
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============
 @import "null";
 body {
-	color: #000;
+	color: #21243d;
 	font-size: 14px;
+	font-family: $fontFamily;
 	&._lock {
 		overflow: hidden;
 	}
@@ -76,7 +77,22 @@ body {
 }
 //</ОСНОВНАЯ СЕТКА>===============================
 
+//<ПОДКЛЮЧАЕМ ОБЩИЕ СТИЛИ (ФОРМЫ, КНОПКИ, ТИПОГРАФИЮ>=========
+@import "ui";
+@import "forms";
+//<ПОДКЛЮЧАЕМ ОБЩИЕ СТИЛИ (ФОРМЫ, КНОПКИ, ТИПОГРАФИЮ>=========
+
 //<ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 @import "header";
+@import "home";
 
 //</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
+
+//<Основной блок>========================
+.page {
+	padding: 90px 0px 0px 0px;
+	flex: 1 1 auto;
+	@media (max-width: $md3 + px) {
+		padding: 30px 0px 0px 0px;
+	}
+}
