--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -145,8 +145,9 @@ h6 {
 }
 
 body {
-  color: #000;
+  color: #21243d;
   font-size: 14px;
+  font-family: "Heebo", sans-serif;
 }
 
 body._lock {
@@ -164,6 +165,44 @@ body._lock {
 ._container {
   max-width: 856px;
   margin: 0 auto;
+}
+
+.title {
+  font-size: 44px;
+  line-height: 136.36364%;
+  color: #21243d;
+  font-weight: 700;
+}
+
+.text {
+  font-size: 16px;
+  line-height: 24px;
+  color: #21243d;
+}
+
+.btn {
+  color: #fff;
+  background-color: #ff6464;
+  transition: background-color 0.3s ease 0s;
+  border-radius: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0px 20px;
+  height: 47px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 145%;
+}
+
+.btn._fw {
+  width: 100%;
+}
+
+.header {
+  position: relative;
+  z-index: 100;
 }
 
 .header__content {
@@ -201,6 +240,54 @@ body._lock {
   display: none;
 }
 
+.hello {
+  padding: 38px 0px 70px 0px;
+}
+
+.hello__container {
+  display: flex;
+}
+
+.hello__content {
+  align-items: flex-start;
+  flex: 1 1 auto;
+  padding: 18px 110px 0px 0px;
+}
+
+.hello__content *:last-child {
+  margin-bottom: 0;
+}
+
+.hello__title {
+  margin: 0px 0px 25px 0px;
+}
+
+.hello__text {
+  margin: 0px 0px 35px 0px;
+}
+
+.hello__btn {
+  margin: 0px 0px 25px 0px;
+}
+
+.hello__avatar {
+  flex: 0 0 223px;
+  width: 223px;
+  height: 223px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: -5px 13px 0px 0px #edf7fa;
+}
+
+.hello__avatar img {
+  width: 100%;
+}
+
+.page {
+  padding: 90px 0px 0px 0px;
+  flex: 1 1 auto;
+}
+
 @media (min-width: 767.98px) {
   .menu__list {
     display: flex;
@@ -217,6 +304,12 @@ body._lock {
   }
 }
 
+@media (min-width: 992px) {
+  .btn:hover {
+    background-color: #d15050;
+  }
+}
+
 @media (max-width: 991.98px) {
   ._container {
     max-width: none;
@@ -228,9 +321,21 @@ body._lock {
   ._container {
     max-width: 750px;
   }
+
+  .hello {
+    padding: 0px 0px 70px 0px;
+  }
+
+  .hello__content {
+    padding: 18px 50px 0px 0px;
+  }
 }
 
 @media (max-width: 767.98px) {
+  .title {
+    font-size: 32px;
+  }
+
   .header__menu {
     height: 50px;
   }
@@ -244,7 +349,7 @@ body._lock {
     left: 0;
     overflow: auto;
     padding: 60px 10px 30px 10px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
   }
 
   .menu__body._active {
@@ -298,6 +403,41 @@ body._lock {
     transform: rotate(45deg);
     bottom: calc(50% + 1px);
   }
+
+  .hello {
+    padding: 0px 0px 60px 0px;
+  }
+
+  .hello__container {
+    text-align: center;
+    flex-direction: column-reverse;
+  }
+
+  .hello__content {
+    padding: 40px 0px 0px 0px;
+  }
+
+  .hello__title {
+    margin: 0px 0px 20px 0px;
+  }
+
+  .hello__text {
+    margin: 0px 0px 25px 0px;
+    padding: 0px 15px;
+  }
+
+  .hello__btn {
+    margin: 0px 0px 20px 0px;
+  }
+
+  .hello__avatar {
+    width: 170px;
+    height: 170px;
+  }
+
+  .page {
+    padding: 30px 0px 0px 0px;
+  }
 }
 @supports (-webkit-appearance:none){
 
@@ -312,6 +452,14 @@ body._lock {
 }
 
  @media (min-width: 991.98px){
+
+@supports (-webkit-appearance:none){
+
+}
+
+}
+
+ @media (min-width: 992px){
 
 @supports (-webkit-appearance:none){
 
