--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -27,7 +27,7 @@
          padding: 18px 50px 0px 0px;
       }
       @media (max-width: $md3 + px) {
-         padding: 40px 0px 0px 0px;
+         padding: 0px 0px 0px 0px;
       }
    }
 
@@ -66,6 +66,101 @@
       @media (max-width: $md3 + px) {
          width: 170px;
          height: 170px;
+         margin: 0px 0px 40px 0px;
       }
+   }
+}
+//================recent post=================
+.recent-posts {
+   background: #edf7fa;
+   padding: 25px 0px 13px 0px;
+   @media (max-width: $md3+px) {
+      padding: 25px 0px 23px 0px;
+   }
+
+   &__container {
+   }
+
+   &__header {
+      display: flex;
+      margin: 0px 0px 20px 0px;
+   }
+
+   &__title {
+      padding: 0px 20px 0px 0px;
+      flex: 1 1 auto;
+   }
+
+   &__view-all {
+      font-size: 16px;
+      flex: 0 0 auto;
+      color: #00a8cc;
+      line-height: 23px;
+      @media (max-width: $md3+px) {
+         display: none;
+      }
+   }
+
+   &__items {
+      margin: 0px -10px;
+      @media (min-width: $md3+px) {
+         display: flex;
+      }
+   }
+
+   &__column {
+      flex: 0 1 50%;
+      padding: 0px 10px;
+      margin: 0px 0px 17px 0px;
+   }
+}
+.recent-post {
+   height: 100%;
+   background: #fff;
+   box-shadow: 0px 4px 10px rgba(187, 225, 250, 0.25);
+   border-radius: 4px;
+   padding: 20px;
+   @media (max-width: $md3+px) {
+      padding: 15px;
+   }
+   *:last-child {
+      margin-bottom: 0;
+   }
+
+   &__title {
+      display: inline-block;
+      font-size: 26px;
+      font-weight: 700;
+      line-height: 38 / 26 * 100%;
+      color: inherit;
+      cursor: pointer;
+      transition: color 0.3s ease 0s;
+      margin: 0px 0px 17px 0px;
+      @media (min-width: $md2+px) {
+         &:hover {
+            color: #ff6464;
+         }
+      }
+      @media (max-width: $md3+px) {
+         font-size: 22px;
+         margin: 0px 0px 10px 0px;
+      }
+   }
+
+   &__info {
+      font-size: 18px;
+      line-height: 26/18 * 100%;
+      margin: 0px 0px 15px 0px;
+      span {
+         margin: 0px 10px;
+      }
+      @media (max-width: $md3+px) {
+         font-size: 16px;
+         margin: 0px 0px 10px 0px;
+      }
+   }
+
+   &__text {
+      margin: 0px 0px 15px 0px;
    }
 }
