Сверстал карточки в секции Featured works

--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -164,3 +164,14 @@
       margin: 0px 0px 15px 0px;
    }
 }
+
+//================featured-works==========================
+.featured-works {
+   padding: 30px 0px 80px 0px;
+   &__container {
+   }
+
+   &__title {
+      margin: 0px 0px 20px 0px;
+   }
+}
