--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -85,6 +85,7 @@ body {
 //<ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 @import "header";
 @import "home";
+@import "works";
 
 //</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 
