--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -20,3 +20,17 @@
       font-size: 18px;
    }
 }
+
+//=====класс делает картинки адаптивными=====
+._ibg {
+   position: relative;
+   img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+   }
+}
+//=========================================
