--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -184,6 +184,20 @@ body._lock {
   font-size: 22px;
 }
 
+._ibg {
+  position: relative;
+}
+
+._ibg img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .btn {
   color: #fff;
   background-color: #ff6464;
@@ -354,6 +368,69 @@ body._lock {
 
 .recent-post__text {
   margin: 0px 0px 15px 0px;
+}
+
+.featured-works {
+  padding: 30px 0px 80px 0px;
+}
+
+.featured-works__title {
+  margin: 0px 0px 20px 0px;
+}
+
+.works__item {
+  display: flex;
+  align-items: flex-start;
+  padding: 0px 0px 30px 0px;
+  margin: 0px 0px 30px 0px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.works__image {
+  flex: 0 0 246px;
+  border-radius: 6px;
+  overflow: hidden;
+  min-height: 180px;
+}
+
+.works__body {
+  flex: 1 1 auto;
+  padding: 0px 0px 0px 18px;
+}
+
+.works__title {
+  display: inline-block;
+  color: inherit;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 146.66667%;
+  margin: 0px 0px 15px 0px;
+}
+
+.works__info {
+  display: flex;
+  align-items: center;
+  margin: 0px 0px 15px 0px;
+}
+
+.works__year {
+  background-color: #142850;
+  border-radius: 16px;
+  height: 25px;
+  padding: 0px 10px;
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.works__category {
+  color: #8695a4;
+  font-size: 20px;
+  line-height: 145%;
+  margin: 0px 0px 0px 25px;
 }
 
 .page {
