--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -168,6 +168,10 @@
 //================featured-works==========================
 .featured-works {
    padding: 30px 0px 80px 0px;
+   @media (max-width: $md3+px) {
+      padding: 30px 0px 30px 0px;
+   }
+
    &__container {
    }
 
