--- a/Adaptiv_site_John/css/style.css
+++ b/Adaptiv_site_John/css/style.css
@@ -379,15 +379,18 @@ body._lock {
 }
 
 .works__item {
-  display: flex;
-  align-items: flex-start;
   padding: 0px 0px 30px 0px;
   margin: 0px 0px 30px 0px;
   border-bottom: 1px solid #e0e0e0;
 }
 
+.works__item:last-child {
+  margin-bottom: 0;
+}
+
 .works__image {
   flex: 0 0 246px;
+  display: block;
   border-radius: 6px;
   overflow: hidden;
   min-height: 180px;
@@ -395,7 +398,6 @@ body._lock {
 
 .works__body {
   flex: 1 1 auto;
-  padding: 0px 0px 0px 18px;
 }
 
 .works__title {
@@ -449,6 +451,15 @@ body._lock {
 
   .recent-posts__items {
     display: flex;
+  }
+
+  .works__item {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .works__body {
+    padding: 0px 0px 0px 18px;
   }
 }
 
@@ -619,6 +630,29 @@ body._lock {
   .recent-post__info {
     font-size: 16px;
     margin: 0px 0px 10px 0px;
+  }
+
+  .featured-works {
+    padding: 30px 0px 30px 0px;
+  }
+
+  .works {
+    display: flex;
+    overflow: auto;
+  }
+
+  .works__item {
+    flex: 0 0 90%;
+    margin: 0px 15px 0px 0px;
+  }
+
+  .works__image {
+    margin: 0px 0px 17px 0px;
+    padding: 0px 0px 60% 0px;
+  }
+
+  .works__title {
+    font-size: 24px;
   }
 
   .page {
