--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -86,6 +86,7 @@ body {
 @import "header";
 @import "home";
 @import "works";
+@import "footer";
 
 //</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 
@@ -95,5 +96,21 @@ body {
 	flex: 1 1 auto;
 	@media (max-width: $md3 + px) {
 		padding: 30px 0px 0px 0px;
+	}
+}
+.social {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	&__item {
+		transition: color 0.3s ease 0s;
+		margin: 0px 17px;
+		font-size: 30px;
+		color: inherit;
+		@media (min-width: $md2+px) {
+			&:hover {
+				color: #ff6464;
+			}
+		}
 	}
 }
