Страница Blog готова!

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -87,6 +87,7 @@ body {
 @import "home";
 @import "works";
 @import "footer";
+@import "blog";
 
 //</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 
