--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -88,6 +88,7 @@ body {
 @import "works";
 @import "footer";
 @import "blog";
+@import "article";
 
 //</ПОДКЛЮЧАЕМ СТИЛИ СТРАНИЦ>=======================
 
