--- a/#src/scss/works.scss
+++ b/#src/scss/works.scss
@@ -1,4 +1,14 @@
 .works {
+   padding-bottom: 60px;
+   @media (max-width: $md3+px) {
+      padding-bottom: 30px;
+   }
+   &__items {
+      padding: 0px 0px 60px 0px;
+      @media (max-width: $md3+px) {
+         padding: 0px 0px 30px 0px;
+      }
+   }
    &__item {
       padding: 0px 0px 30px 0px;
       margin: 0px 0px 30px 0px;
@@ -30,7 +40,12 @@
          padding: 0px 0px 0px 18px;
       }
    }
-
+   &__main-title {
+      margin-bottom: 45px;
+      @media (max-width: $md3 + px) {
+         margin-bottom: 20px;
+      }
+   }
    &__title {
       display: inline-block;
       color: inherit;
@@ -38,8 +53,14 @@
       font-weight: 700;
       line-height: 44 / 30 * 100%;
       margin: 0px 0px 15px 0px;
+      transition: color 0.3s ease 0s;
       @media (max-width: $md3+px) {
          font-size: 24px;
+      }
+      @media (min-width: $md2+px) {
+         &:hover {
+            color: #ff6464;
+         }
       }
    }
 
